# cmfd

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DEPENDENCIES.md  README.md
scripts/: fetch_third_party_minimal.sh
source/: LinearSystem.cpp  LinearSystem.hpp  PostProcessor.cpp  PostProcessor.hpp  ProblemAssembler.cpp  ProblemAssembler.hpp  Reporter.cpp  Reporter.hpp  SimulationConfig.cpp  SimulationConfig.hpp  SimulationTypes.hpp  SolverFactory.cpp  SolverFactory.hpp  SolverStrategy.hpp  main.cpp
